# scratchpad

./: README.md  cms_reference.md  code_kata.md  data_warehouse_modeling.md  devops.md  every_programmer_should_know.md  frontendmaster_slides.md  getting_back_to_php_development.md  go_web_server.md  improving_dev_environment_workflow.md  improving_dev_tools_cheatsheet.md  interview_questions_that_caught_me_offguard.md  nvim_python.md  nvim_setup.md  pre_commit_hook.md  python_class.md  python_tdd.md  reinstalling_poetry_environment.md  rust.md  sandbox_docker_machine.md  spark_playground.md  swe_softskills.md  tech_interview.md  tools_to_learn_more.md  web3_blockchain.md  web_server.md
codes/html/: invoice.html
codes/python/: decorator.py  permutation.py
codes/python/certificates_data_entry_tools/: .gitignore  README.md  config.py  database.py  insert_participants.py  insert_programs.py  insert_schedules.py  pyproject.toml
second-brain/projects/01_pkm_tools/: specs.md
second-brain/projects/02_news_to_market_impact_analysis/: specs.md
